--- a/src/GUI/connection.ui
+++ b/src/GUI/connection.ui
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>gridLayout_1</class>
- <widget class="QDialog" name="gridLayout_1">
+ <class>ConnectDB</class>
+ <widget class="QDialog" name="ConnectDB">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -12,6 +15,9 @@
   </property>
   <property name="windowTitle">
    <string>Connect Settings</string>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
   </property>
   <layout class="QGridLayout" name="0">
    <item row="0" column="1">
